# ultro

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
models/: __init__.py  cart_pole.py  complementarity_MLP.py  complementarity_RNN.py  discontinuous_control.py  furuta_pendulum.py  inverted_pendulum.py  linear.py  neural_complementarity_network.py
models_nn/: optimal_params.json  optimal_params.yaml  optimal_params_2x10x15_2026-02-12_16-11-09.json  optimal_params_2x10x15_2026-02-12_16-11-09.yaml  optimal_params_2x10x15_2026-02-12_17-18-28.json  optimal_params_2x10x15_2026-02-12_17-18-28.yaml  optimal_params_2x10x1_2026-02-06.json  optimal_params_2x10x1_2026-02-06.yaml  optimal_params_2x10x1_2026-02-12_16-17-11.json  optimal_params_2x10x1_2026-02-12_16-17-11.yaml  optimal_params_2x10x20_2026-02-10.json  optimal_params_2x10x20_2026-02-10.yaml  optimal_params_2x10x20_2026-02-11.json  optimal_params_2x10x20_2026-02-11.yaml  optimal_params_2x10x20_2026-02-12.json  optimal_params_2x10x20_2026-02-12.yaml  optimal_params_2x3x3x4x1_2026-02-12_16-35-03.json  optimal_params_2x3x3x4x1_2026-02-12_16-35-03.yaml  optimal_params_2x3x3x4x1_2026-02-12_16-38-22.json  optimal_params_2x3x3x4x1_2026-02-12_16-38-22.yaml  optimal_params_2x4x5x1_2026-02-12_16-21-27.json  optimal_params_2x4x5x1_2026-02-12_16-21-27.yaml  optimal_params_2x5x10x1_2026-02-12_16-52-27.json  optimal_params_2x5x10x1_2026-02-12_16-52-27.yaml  optimal_params_2x5x10x1_2026-02-19_11-10-48.json  optimal_params_2x5x10x1_2026-02-19_11-10-48.yaml  optimal_params_2x5x10x1_2026-02-20_10-27-43.json  optimal_params_2x5x10x1_2026-02-20_10-27-43.yaml  optimal_params_2x5x10x1_2026-02-20_11-03-00.json  optimal_params_2x5x10x1_2026-02-20_11-03-00.yaml  optimal_params_2x6x6x1.json  (+68 more)
(+101 files in other folders)
